--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,6 @@ script: npm run-script ci
 branches:
   only:
     - master
-    - issue-6917
 env:
   - TYPES=unit
     JQUERIES=1.8.3
@@ -18,13 +17,30 @@ env:
   - TYPES=unit
     JQUERIES=git
   - TYPES=integration
+    SUITES=!navigation
     JQUERIES=1.8.3
   - TYPES=integration
+    SUITES=!navigation
     JQUERIES=1.10.2
   - TYPES=integration
+    SUITES=!navigation
     JQUERIES=2.0.3
   - TYPES=integration
+    SUITES=!navigation
     JQUERIES=git
+  - TYPES=integration
+    SUITES=navigation
+    JQUERIES=1.8.3
+  - TYPES=integration
+    SUITES=navigation
+    JQUERIES=1.10.2
+  - TYPES=integration
+    SUITES=navigation
+    JQUERIES=2.0.3
+  - TYPES=integration
+    SUITES=navigation
+    JQUERIES=git
+
 notifications:
   irc:
     channels:
